<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/intent2"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_are_two_types_of_intent_lets_have_a_look_at_them_just_enter_the_text_here_and_click_the_intent_you_want_try_out"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/typed_text"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:background="@android:color/white"
        android:hint="@string/try_the_out_here"
        android:autofillHints="@string/try_the_out_here"
        android:inputType="text" />
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/implicit_btn"
            android:text="@string/implicit_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/explicit_btn"
            android:layout_marginLeft="30dp"
            android:text="@string/explicit_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>

